Secao16-Mock-exams/269-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: messaging
  labels:
    tier: msg
spec:
  containers:
  - name: redis
    image: redis:alpine
