Secao16-Mock-exams/269-pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: temp-bus
  namespace: finance
spec:
  containers:
  - name: redis
    image: redis:alpine
