Secao16-Mock-exams/271-pod-com-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: use-pv
  name: use-pv
spec:
  containers:
    - name: use-pv
      image: nginx
      volumeMounts:
      - mountPath: "/data"
        name: mypd
  dnsPolicy: ClusterFirst
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: my-pvc
