Secao16-Mock-exams/271-pod-empty-dir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-storage
spec:
  containers:
  - image: redis:alpine
    name: redis-storage
    volumeMounts:
    - mountPath: /data/redis
      name: redis-storage-volume
  volumes:
  - name: redis-storage-volume
    emptyDir:
      sizeLimit: 500Mi
