Secao16-Mock-exams/271-pod-pra-expor.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-resolver
spec:
  containers:
  - name: nginx-resolver
    image: nginx
    ports:
    - containerPort: 80
