Secao16-Mock-exams/273-x--questao1--pod-com-service-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pvviewer
  name: pvviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pvviewer
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pvviewer
    spec:
      serviceAccountName: pvviewer  # Corrigido: colocado dentro de spec.template.spec
      containers:
      - image: redis
        name: redis
        resources: {}
