Secao16-Mock-exams/273-x--questao3--pod-multi-containers-variaveis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
  - name: alpha
    image: nginx
  - name: beta
    image: busybox
    command: ['sh', '-c', 'sleep 4800']
