Secao16-Mock-exams/273-x--questao9-.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-01-12T14:47:56Z"
  generation: 4
  labels:
    app: nginx-deploy
  name: nginx-deploy
  namespace: default
  resourceVersion: "2617"
  uid: 48b66eda-fa11-4ac7-bd1a-39666852c002
spec:
  progressDeadlineSeconds: 600
  replicas: 13
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-deploy
  strategy:
    rollingUpdate:
      maxSurge: 75%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-deploy
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: env_type
        operator: Equal
        value: production
