Secao16-Mock-exams/269-service10.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-web-app-service
spec:
  selector:
    app: hr-web
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30082
