Secao16-Mock-exams/271-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-resolver-service
spec:
  selector:
    app.kubernetes.io/name: nginx-resolver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
